development-runs/372/k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rrb-app
  labels:
    name: rrb-app
