development-runs/372/k8s/prod/asset-management-api-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asset-management-api-mysql
  namespace: rrb-app
  labels:
    io.kompose.service: asset-management-api-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: asset-management-api-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: asset-management-api-mysql
    spec:
      containers:
        - name: asset-management-api-mysql
          image: mysql:8.0.33
          args:
            - --default-authentication-plugin=mysql_native_password
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: asset-management-api-mysql-claim0
              mountPath: /var/lib/mysql
      volumes:
        - name: asset-management-api-mysql-claim0
          persistentVolumeClaim:
            claimName: asset-management-api-mysql-claim0
