development-runs/372/k8s/prod/notification-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api
  namespace: rrb-app
  labels:
    io.kompose.service: notification-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notification-api
  template:
    metadata:
      labels:
        io.kompose.service: notification-api
    spec:
      containers:
        - name: notification-api
          image: ralfx22/rrb-notification-api
