development-runs/372/k8s/prod/transaction-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-api
  namespace: rrb-app
  labels:
    io.kompose.service: transaction-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: transaction-api
  template:
    metadata:
      labels:
        io.kompose.service: transaction-api
    spec:
      containers:
        - name: transaction-api
          image: ralfx22/rrb-transaction-api
