development-runs/372/k8s/prod/transaction-api-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-api-postgres
  namespace: rrb-app
  labels:
    io.kompose.service: transaction-api-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: transaction-api-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: transaction-api-postgres
    spec:
      containers:
        - name: transaction-api-postgres
          image: postgres:15.2
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: transaction-api-postgres-claim0
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: transaction-api-postgres-claim0
          persistentVolumeClaim:
            claimName: transaction-api-postgres-claim0
