development-runs/372/k8s/prod/account-api-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-api-mongo
  namespace: rrb-app
  labels:
    io.kompose.service: account-api-mongo
spec:
  type: ClusterIP
  selector:
    io.kompose.service: account-api-mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
