development-runs/372/k8s/prod/asset-management-api-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asset-management-api-mysql
  namespace: rrb-app
  labels:
    io.kompose.service: asset-management-api-mysql
spec:
  type: ClusterIP
  selector:
    io.kompose.service: asset-management-api-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
