development-runs/372/k8s/prod/notification-api-kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-api-kafka
  namespace: rrb-app
  labels:
    io.kompose.service: notification-api-kafka
spec:
  type: ClusterIP
  selector:
    io.kompose.service: notification-api-kafka
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
    - name: controller
      port: 29093
      targetPort: 29093
